<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Toss Me!</string>
    <string name="hello_world">Hello world!</string>
    <string name="x_acc_default">X Acceleration here</string>
    <string name="y_acc_default">Y Acceleration here</string>
    <string name="z_acc_default">Z Acceleration here</string>
    <string name="x_vel_default">X Velocity here</string>
    <string name="y_vel_default">Y Velocity here</string>
    <string name="z_vel_default">Z Velocity here</string>
    <string name="x_pos_default">X Position here</string>
    <string name="y_pos_default">Y Position here</string>
    <string name="z_pos_default">Z Position here</string>
    <string name="CalibrateButtonText">Calibrate</string>
    <string name="goButtonText">Go</string>
    <string name="ResetButtonText">Reset</string>
    <string name="DebugTVText">Debug</string>
</resources>
